# autossh

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  tool.py  xbuild
.cargo/: config
atsh-app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
atsh-app/src/: App.vue  main.ts
atsh-app/src-tauri/: Cargo.toml  tauri.conf.json
atsh-app/src-tauri/src/: cmd.rs  lib.rs  main.rs
atsh-app/src/views/: Remotes.vue
atsh-cli/: Cargo.toml  README.md  build.rs
atsh-cli/src/: main.rs
atsh-lib/: Cargo.toml  README.md
atsh-lib/src/: db.rs  lib.rs
atsh-lib/src/config/: ctx.rs  default.toml  key.rs  load.rs  mod.rs
atsh-lib/src/connection/: mod.rs  remote.rs  ssh.rs
atsh-lib/src/ssh/: mod.rs  remote.rs  secure.rs  server.rs  session.rs
atsh-lib/src/storage/: db.rs  log.rs  mod.rs  secure.rs
cli/: Cargo.toml  README.md  build.rs
cli/src/: main.rs
passh/: Makefile  passh.c
src/: main.rs
src/cmd/: mod.rs  plugin.rs
src/config/: mod.rs
src/ssh/: bind.rs  mod.rs  record.rs  secure.rs  server.rs  session.rs
