[package]
name = "autossh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
env_logger = "0.11.3"
log = "0.4.21"
prettytable = "0.10.0"
serde = { version = "1.0.201", features = ["derive"] }
toml = "0.8.12"

[build-dependencies]
cc = "1.0.97"
