[package]
name = "autossh"
version = "0.3.2"
edition = "2021"
authors = ["idhyt3r@gmail.com"]
license = "MIT"
description = "ssh server manager and login without password"
readme = "README.md"
homepage = "https://github.com/idhyt/autossh"
repository = "https://github.com/idhyt/autossh"
keywords = ["ssh", "passwordless", "autossh"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
home = "0.5.9"
lazy_static = "1.4.0"
log = "0.4.21"
prettytable = "0.10.0"
serde = { version = "1.0.201", features = ["derive"] }
ssh2 = { version = "0.9.4", features = ["vendored-openssl"] }
# strfmt = "0.2.4"
toml = "0.8.12"
