[package]
name = "atsh"
version = "0.4.3"
edition = "2021"
authors = ["idhyt3r@gmail.com"]
license = "MIT"
description = "autossh/@shell tool is used to ssh login and allow automatically login without password"
readme = "README.md"
homepage = "https://github.com/idhyt/autossh/tree/main/atsh-cli"
repository = "https://github.com/idhyt/autossh/tree/main/atsh-cli"
keywords = ["atsh", "autossh", "atshell", "ssh", "passwordless"]
categories = [
    "network-programming",
    "command-line-utilities",
    "development-tools",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# atsh-lib = "0.1.5"
atsh-lib = {path = "../atsh-lib" }
clap = { version = "4.5.41", features = ["derive"] }
tracing = "0.1.41"
