[package]
name = "atsh-lib"
version = "0.1.0"
edition = "2024"
authors = ["idhyt3r@gmail.com"]
license = "MIT"
description = "autossh library"
readme = "README.md"
homepage = "https://github.com/idhyt/autossh"
repository = "https://github.com/idhyt/autossh"
keywords = ["ssh", "passwordless", "autossh"]
categories = ["command-line-utilities"]

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
home = "0.5.11"
log = "0.4.27"
parking_lot = "0.12.4"
prettytable = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
ssh2 = "0.9.5"
toml = "0.9.2"
