[package]
name = "atsh-lib"
version = "0.1.5"
edition = "2021"
authors = ["idhyt3r@gmail.com"]
license = "MIT"
description = "autossh/@shell library is used to ssh login and allow automatically login without password"
readme = "README.md"
homepage = "https://github.com/idhyt/autossh/tree/main/atsh-lib"
repository = "https://github.com/idhyt/autossh/tree/main/atsh-lib"
keywords = ["atsh", "autossh", "atshell", "ssh", "passwordless"]
categories = [
    "network-programming",
    "command-line-utilities",
    "development-tools",
]

[lib]
name = "atsh_lib"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
parking_lot = "0.12.4"
prettytable = "0.10.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
ssh2 = "0.9.5"
toml = "0.9.2"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "local-time",
] }
# cargo build --release --target x86_64-unknown-linux-musl --features openssl
openssl = { version = "0.10.64", features = ["vendored"], optional = true }
