[package]
name = "autossh"
version = "0.3.2"
edition = "2021"
authors = ["idhyt3r@gmail.com"]
license = "MIT"
description = "ssh server manager and login without password"
readme = "README.md"
homepage = "https://github.com/idhyt/autossh"
repository = "https://github.com/idhyt/autossh"
keywords = ["ssh", "passwordless", "autossh"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atsh-lib = { path = "../atsh-lib" }

anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
tracing = "0.1.41"

